Fixed align

--- a/src/resources/css/header.css
+++ b/src/resources/css/header.css
@@ -26,7 +26,7 @@
 }
 
 .navbar.header #langOption {
-	margin-right: 100px;
+	margin-right: 80px;
 	margin-top: 15px;
 }
 
